[tool.poetry]
name = "openpiv-python-cpu"
version = "1.1.2"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GNU General Public License v3 (GPLv3)"
readme = "README.md"
packages = [{include = "openpiv_cpu"}]

classifiers=[
        # PyPI-specific version type. The number specified here is a magic constant with no relation to this
        # application's version numbering scheme.
        # *sigh*
        "Development Status :: 4 - Beta",
        # Sublist of all supported Python versions.
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        # Sublist of all supported platforms and environments.
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX",
        # Miscellaneous metadata.
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Topic :: Scientific/Engineering",
    ]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^2.0.1"
scipy = "^1.14.0"
pyFFTW = ">= 0.13.1"
mpire = "^2.10.2"
numba = "^0.60.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-benchmark = "^4.0.0"
pytest-regressions = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
